--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
-body{
-  background-color: mistyrose;
+/* Some CSS Setup - nothing to do with flexbox */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: sans-serif;
+  margin: 0;
+  background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
+}
+
+a {
+  color:white;
+  font-weight: 100;
+  letter-spacing: 2px;
+  text-decoration: none;
+  background:rgba(0,0,0,0.2);
+  padding:20px 5px;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  transition:all 0.5s;
+}
+
+a:hover {
+  background:rgba(0,0,0,0.3);
+}
+/* centers the entire content */
+.wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding:50px;
+}
+
+
+/* Flex Container */
+.flex-nav ul {
+  border:1px solid black;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display:flex;
+}
+/* will apply flex to all the li */
+.flex-nav li{
+  flex:3;
+}
+/* will over ride the li styles */
+.flex-nav .social{
+  flex:1;
+}
+
+/* at a 1000px have the items line up in twos and social icons stack */
+@media all and (max-width:1000px) {
+  
+
+}
+
+@media all and (max-width:500px) {
+  
+
 }
