--- a/style.css
+++ b/style.css
@@ -56,11 +56,21 @@ a:hover {
 
 /* at a 1000px have the items line up in twos and social icons stack */
 @media all and (max-width:1000px) {
-  
-
+  .flex-nav ul{
+    flex-wrap:wrap;
+  }
+  .flex-nav li{
+    flex: 1 1 50%;
+  }
+  /* takes care of social but works without */
+  .flex-nav .social{
+    flex: 1 1 25%;
+  }
 }
 
 @media all and (max-width:500px) {
-  
-
+  .flex-nav li{
+    /* sets the nav items to be 100% */
+    flex-basis:100%;
+  }
 }
