--- a/web.css
+++ b/web.css
@@ -38,3 +38,13 @@ a:hover {
 img{
   width:100%;
 }
+
+.wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+input {
+  padding:10px;
+  border:0;
+}
