--- a/web.css
+++ b/web.css
@@ -48,3 +48,94 @@ input {
   padding:10px;
   border:0;
 }
+
+section, footer {
+  text-align: center;
+  background:rgba(0,0,0,0.2);
+  padding:20px;
+  margin:20px 0;
+  color:white;
+  font-weight: 100;
+}
+
+/* Start of Flex containers -- width already set to 100% so background is filled */
+.flex-nav ul {
+  border:1px solid black;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display:flex;
+}
+
+/* Flex Item -- width already set to 100% so background is filled */
+.flex-nav li {
+  flex:3;
+}
+
+.flex-nav .social {
+  flex:1;
+}
+
+@media all and (max-width:1000px) {
+  
+  .flex-nav ul {
+    flex-wrap:wrap;
+  }
+/* flex-basis 50% creates two columns  */
+  .flex-nav li {
+    flex:1 1 50%;
+  }
+/* somehow sets the social icons to be laid out in a row */
+  .flex-nav .social {
+    flex:1 1 25%;
+  }
+
+}
+
+@media all and (max-width:500px) {
+  /* overrides the 50% two column flex item to be one column */
+  .flex-nav li {
+    flex-basis:100%;
+  }
+  /* Turn on flexbox */
+  .wrapper {
+    display:flex;
+    flex-direction:column;
+  }
+
+  /* Reorder items */
+  .wrapper > * {
+    order:999;
+  }
+  
+  /* Nav */
+  .flex-nav {
+    order:1;
+  }
+
+  .toggleNav {
+    display: block;
+  }
+
+  .flex-nav ul {
+    display: none;
+  }
+    .flex-nav ul.open {
+      display:flex;
+    }
+  
+  /* Header */
+  .top {
+    order:2;
+  }
+
+  /* Details */
+  .details {
+    order:3;
+  }
+
+  /* Sign Up */
+  .signup {
+    order:4;
+  }
+}
